data/derived/comb/progs/unify/prog1721.ml.out
Characters 150-159:
  (Printf.kprintf ("hi %d") carry)
                  ^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         string -> 'a
